--- a/src/components/pages/BasePage/BasePage.css
+++ b/src/components/pages/BasePage/BasePage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Abel&display=swap');
+
 html, body {
   /* background-color: #000; */
   margin: 0;
@@ -15,17 +17,25 @@ html, body {
   padding: 0;
   margin: 0;
   width: 100%;
-  background-color: red;
+  background-color: rgba(72, 84, 96,1.0);
 }
 .tab-menu-item {
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  border: none;
+  font-family: Abel;
+  font-size: 1.05rem;
+  user-select: none;
   appearance: none;
   display: block;
-  padding: 0.5rem;
+  padding: 0.5rem 0.25rem;
   flex: 1;
   text-align: center;
   cursor: pointer;
+  background-color: rgba(72, 84, 96,1.0);
+  color: rgba(210, 218, 226,1.0)
 }
 .tab-menu-item-selected {
-  background-color: #eee;
+  font-weight: bold;
+  background-color: rgba(30, 39, 46,1.0);
 }
