--- a/src/components/pages/BasePage/BasePage.css
+++ b/src/components/pages/BasePage/BasePage.css
@@ -4,6 +4,11 @@ html, body {
   /* background-color: #000; */
   margin: 0;
   padding: 0;
+  font-size: 17px;
+}
+
+header {
+  font-family: Abel;
 }
 
 .basePageContent {
@@ -28,7 +33,7 @@ html, body {
   user-select: none;
   appearance: none;
   display: block;
-  padding: 0.5rem 0.25rem;
+  padding: 1rem 0.25rem;
   flex: 1;
   text-align: center;
   cursor: pointer;
